--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js">
     </script>
     <script>
-        function testNavigateTo() {
-            wx.miniProgram.navigateTo({
-                url: "../index/index"
-            })
+        function testWx() {
+            // wx.miniProgram.navigateTo({
+            //     url: "../index/index"
+            // })
+            wx.miniProgram.navigateBack({ delta: 1 });
         }
     </script>
 </head>
@@ -24,7 +25,7 @@
 <body>
 
     <form action="">
-        <input type="button" value="fuck me if you can !!!" onclick="testNavigateTo()" />
+        <input type="button" value="fuck me if you can !!!" onclick="testWx()" />
     </form>
 
 </body>
