--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name='description' content=''>
 
     <!-- js/css -->
-    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js">
-    </script>
+    <script type="text/javascript" src="https://qzonestyle.gtimg.cn/qzone/qzact/act/external/qqjssdk/qqjssdk-1.0.0.js"></script>
+    <!-- <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script> -->
     <script>
         function testWx() {
             // wx.miniProgram.navigateTo({
