--- a/index.html
+++ b/index.html
@@ -9,30 +9,79 @@
     <meta name='keywords' content='关键词,关键词'>
     <meta name='description' content=''>
 
+    <style>
+        .wx-btn {
+            width: 300px;
+            height: 100px;
+            line-height: 100px;
+            color: #ffffff;
+            background: #2BA245;
+            font-size: 16pt;
+            text-align: center;
+            margin: 5px;
+        }
+    </style>
+
     <!-- js/css -->
-    <script type="text/javascript" src="https://qzonestyle.gtimg.cn/qzone/qzact/act/external/qqjssdk/qqjssdk-1.0.0.js"></script>
+    <!-- <script type="text/javascript" src="https://qzonestyle.gtimg.cn/qzone/qzact/act/external/qqjssdk/qqjssdk-1.0.0.js"></script> -->
     <!-- <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script> -->
     <script>
-        function testWx() {
-            // wx.miniProgram.navigateTo({
-            //     url: "../index/index"
-            // })
+        var head = document.getElementsByTagName("head")[0];
+        var wx_miniprogram_tag = document.createElement("script");
+        wx_miniprogram_tag.type = "text/javascript";
+        if (window.location.hash.indexOf("qq") >= 0)
+            wx_miniprogram_tag.src = "https://qzonestyle.gtimg.cn/qzone/qzact/act/external/qqjssdk/qqjssdk-1.0.0.js";
+        else
+            wx_miniprogram_tag.src = "https://res.wx.qq.com/open/js/jweixin-1.3.2.js";
+        head.appendChild(wx_miniprogram_tag);
+        console.log(wx_miniprogram_tag.src);
 
-            // wx.miniProgram.navigateBack({ delta: 1 });
-
-            wx.miniProgram.reLaunch({
-                url: "../index/index"
-            })
+        function testWx(item) {
+            switch (item) {
+                case 'navigateTo':
+                    console.log('test navigateTo');
+                    wx.miniProgram.navigateTo({
+                        url: '../index/index'
+                    })
+                    break;
+                case 'navigateBack':
+                    console.log('test navigateBack');
+                    wx.miniProgram.navigateBack({
+                        delta: 1
+                    });
+                    break;
+                case 'reLaunch':
+                    console.log('test reLaunch');
+                    wx.miniProgram.reLaunch({
+                        url: '../index/index'
+                    })
+                    break;
+                case 'postMessage':
+                    console.log('test navigateBack && postMessage');
+                    wx.miniProgram.navigateBack({
+                        delta: 1
+                    });
+                    wx.miniProgram.postMessage({ data: 'hello, world' });
+                    break;
+            }
         }
+
     </script>
 </head>
 
 <body>
-
-    <form action="">
-        <input type="button" value="fuck me if you can !!!" onclick="testWx()" />
-    </form>
-
+    <div class="wx-btn" onclick="testWx('navigateTo')">
+        navigateTo
+    </div>
+    <div class="wx-btn" onclick="testWx('navigateBack')">
+        navigateBack
+    </div>
+    <div class="wx-btn" onclick="testWx('reLaunch')">
+        reLaunch
+    </div>
+    <div class="wx-btn" onclick="testWx('postMessage')">
+        postMessage
+    </div>
 </body>
 
 </html>
