miniProgram test page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <!-- 声明当前页面的编码集：charset=gbk,gb2312(中文编码) , utf-8(国际编码) -->
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-    <!-- 声明当前页面的三元素 -->
+    <meta name="viewport"
+        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <title>Corona's Kitchen</title>
-    <meta name='keywords' content='关键词,关键词'>
-    <meta name='description' content=''>
+    <!-- <meta name='keywords' content='关键词,关键词'>
+    <meta name='description' content=''> -->
 
     <style>
         .wx-btn {
