--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <!-- <meta name="viewport"
+        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" /> -->
     <title>Corona's Kitchen</title>
     <!-- <meta name='keywords' content='关键词,关键词'>
     <meta name='description' content=''> -->
 
     <style>
         .wx-btn {
-            width: 300px;
-            height: 100px;
-            line-height: 100px;
+            width: 100%;
+            height: 5rem;
+            line-height: 5rem;
             color: #ffffff;
             background: #2BA245;
             font-size: 16pt;
