--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <style>
         .wx-btn {
             width: 100%;
-            height: 5rem;
+            height: 10rem;
             line-height: 5rem;
             color: #ffffff;
             background: #2BA245;
-            font-size: 16pt;
+            font-size: 2rem;
             text-align: center;
             margin: 5px;
         }
