miniProgram test page

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         .wx-btn {
             width: 100%;
             height: 10rem;
-            line-height: 5rem;
+            line-height: 10rem;
             color: #ffffff;
             background: #2BA245;
-            font-size: 2rem;
+            font-size: 5rem;
             text-align: center;
-            margin: 5px;
+            margin: 2rem;
         }
     </style>
 
