--- a/sheet-0.html
+++ b/sheet-0.html
@@ -85,6 +85,11 @@
 
         }
 
+        .excelDefaults th {
+            position: sticky;
+            top: 0;
+        }
+
         .excelDefaults td {
             /*padding: 1px 5px;*/
             border: 1px solid silver;
