--- a/out317.html
+++ b/out317.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,
     maximum-scale=4.0, minimum-scale=0.5, user-scalable=yes" />
 
-<style type="text/css">.b1{white-space-collapsing:preserve;}
+<style type="text/css">
 .b2{margin: 1em;}
 .s1{color:#17365d;}
 .s2{font-weight:bold;}
