--- a/out-org.html
+++ b/out-org.html
@@ -5,7 +5,7 @@
     maximum-scale=4.0, minimum-scale=0.5, user-scalable=yes" />
 
 <style type="text/css">.b1{white-space-collapsing:preserve;}
-.b2{margin: 1in;}
+.b2{margin: 1em;}
 .s1{color:#17365d;}
 .s2{font-weight:bold;}
 .s3{font-weight:bold;color:#365f91;}
