--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script>
     function test() {
         console.log('启动微云')
-        window.location.href = 'weiyun://recentfeeds/';
+        window.location.href = 'weiyun://action/recentfeeds';
     }
 </script>
 
